force-app/main/default/objects/R360_Delivery_Role__mdt/R360_Delivery_Role__mdt.object-meta.xml
<CustomObject><label>Resource 360 Delivery Role</label><pluralLabel>Resource 360 Delivery Roles</pluralLabel><visibility>Public</visibility></CustomObject>