force-app/main/default/objects/R360_Delivery_Role__mdt/fields/Role_Code__c.field-meta.xml
<CustomField><fullName>Role_Code__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Role Code</label><length>80</length><type>Text</type></CustomField>