force-app/main/default/objects/R360_Delivery_Role__mdt/fields/Tower__c.field-meta.xml
<CustomField><fullName>Tower__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Salesforce Tower</label><length>80</length><type>Text</type></CustomField>